# Sorting-algorithms-parallelization

./: .gitignore  CMakeLists.txt  CMakeListsDurmo.txt  Makefile  README.md  c_cpp_properties.json  config.yaml.example  executable_usage.md  requirements.txt  run_executables.ps1  run_executables.sh  run_plots_generating.ps1  run_project.ps1  run_project.sh  run_project_durmo.ps1  run_project_gora.ps1
academic/: Paralelizacija algoritama sortiranja.aux  Paralelizacija algoritama sortiranja.fdb_latexmk  Paralelizacija algoritama sortiranja.fls  Paralelizacija algoritama sortiranja.tex
academic_paper/: Paralelizacija algoritama sortiranja.tex  abstract.tex  diskusija.tex  diskusija_content.tex  implementacija.tex  implementacija_content.tex  literatura.bib  literatura.tex  poglavlje_1.tex  poglavlje_2.tex  pregled_literature_content.tex  rezultati.tex  rezultati_content.tex  zakljucak.tex
data/: last_run_hashes.txt  new_hashes.txt
docs/: benchmark_mode.md  bitonic_sort.md  merge_sort.md  quick_sort.md  std_sort_execution_policies.md
include/: main_template.hpp  run_sort_gpu.hpp  simd_helpers.hpp  timers.hpp  utils.hpp
naive_gpu/bitonic_sort/: bitonic_sort.cu  bitonic_sort.exp  bitonic_sort.lib
naive_gpu/merge_sort/: merge_sort.cu  merge_sort.exp  merge_sort.lib
naive_gpu/quick_sort/: quick_sort.cu  quick_sort.exp  quick_sort.lib
naive_gpu/radix_sort/: radix_sort.cu  radix_sort.exp  radix_sort.lib
naive_gpu/std_sort/: std_sort.cu  std_sort.exp  std_sort.lib
parallel_cpu/: bitonic_sort.cpp  bitonic_sort1.txt  bitonic_sort2.txt  merge_sort.cpp  merge_sort1.cpp  merge_sort2.cpp  quick_sort.cpp  radix_sort.cpp  sample_sort.cpp  std_sort.cpp
parallel_gpu/bitonic_data/: bitonic_20260207_003250.csv  bitonic_20260207_003900.csv  bitonic_20260207_005927.csv  bitonic_sweep_20260207_010608.csv  bitonic_sweep_20260210_234644.csv  bitonic_sweep_20260211_001439.csv  bitonic_sweep_20260211_003827.csv
parallel_gpu/bitonic_sort/: bitonic.cu  bitonic.exp  bitonic.lib  bitonic_sort.cu  bitonic_sort.exp
parallel_gpu/data/: benchmark_gpu.csv  best_results.csv  detailed_results.csv
parallel_gpu/include/: merge_radix_api.hpp
parallel_gpu/merge_data/: merge_BlockMerge_20260207_233821.csv  merge_Coarsened_20260207_233821.csv  merge_PerElement_20260207_233821.csv  merge_best_20260207_233821.csv
parallel_gpu/merge_sort/: best_results.csv  detailed_results.csv  merge.cu  merge.exp  merge.lib  merge_sort.cu  merge_sort.exp  merge_sort.h  results.txt.ncu-rep  scenarios_results.csv
parallel_gpu/quick_data/: quick_batched_sweep_20260208_220209.csv  quick_fat_sweep_20260208_225318.csv  quick_iterative_v2_sweep_20260208_233831.csv  quick_optimized_sweep_20260208_225823.csv
parallel_gpu/quick_sort/: local_helpers.h  quick.cu  quick.exp  quick.lib  quick_sort.cu  quick_sort.exp  sort_test.exp  sort_test.lib
parallel_gpu/radix_data/: radix_sweep_20260207_230429.csv
parallel_gpu/radix_sort/: radix.cu  radix.exp  radix.lib  radix_sort._old.cu  radix_sort.cu  radix_sort.exp  radix_sort.h  radix_sort_withcpu.cu
parallel_gpu/thrust_data/: thrust_sweep_20260207_171603.csv  thrust_sweep_20260207_172340.csv  thrust_sweep_20260207_224751.csv
parallel_gpu/thrust_sort/: thrust.cu  thrust.exp  thrust.lib  thrust_benchmark.exp  thrust_benchmark.lib  thrust_sort.cu
plots/: plot_results.py
sequential/: sample_sort.cpp
sequential_naive/: bitonic_sort.cpp  merge_sort.cpp  quick_sort.cpp  radix_sort.cpp  std_sort.cpp
sequential_optimized/: bitonic_sort.cpp  merge_sort.cpp  quick_sort.cpp  radix_sort.cpp  std_sort.cpp
